Fix overflow visual issue

--- a/src/LandingPage/AboutSection/AboutSection.module.css
+++ b/src/LandingPage/AboutSection/AboutSection.module.css
@@ -8,7 +8,7 @@
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
