--- a/src/LandingPage/ExperienceSection/ExperienceSection.module.css
+++ b/src/LandingPage/ExperienceSection/ExperienceSection.module.css
@@ -8,7 +8,7 @@
 .experience_details {
     padding: 1rem;
     border-radius: 15px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .experience {
